<resources>
    <string name="app_name">BLK_MADLIBS</string>
    <string name="title">MAD</string>
    <string name="title2">LIBS</string>
    <string name="lib_one">Enter a place</string>
    <string name="lib_two">Enter a name</string>
    <string name="lib_three">Enter a salutation</string>
    <string name="lib_four">Enter a number</string>
    <string name="lib_five">Enter a adjective</string>
    <string name="lib_six">Enter a noun</string>
    <string name="lib_seven">Enter a place</string>
    <string name="lib_eight">Enter a adjective</string>
    <string name="enter">Submit</string>
    <string name="story1">I went to the beach in</string>
    <string name="story2">today with</string>
    <string name="story3">We had a</string>
    <string name="story4">time.</string>
    <string name="story5">We first built a</string>
    <string name="story6">and then we ran around in the</string>
    <string name="story7">for a little while.</string>
    <string name="story8">The water was a bit</string>
    <string name="story9">.</string>
    <string name="story10">The sun was very</string>
    <string name="story11">so we made sure to wear a lot of</string>
    <string name="story12">.</string>
    <string name="story13">years from now we will go back.</string>
    <string name="instruct">Please enter a value for each.</string>













</resources>