<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMessageActivity"
    android:background="#B450C5">

    <TextView
        android:id="@+id/nounone"
        android:layout_width="164dp"
        android:layout_height="60dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nounone2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nounone2"
        android:layout_width="174dp"
        android:layout_height="56dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nounone5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.381"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nounone3"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nounone4"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="232dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nounone5"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nounone6"
        android:layout_width="184dp"
        android:layout_height="46dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nounone7"
        android:layout_width="162dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/nounone8"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/edittextstyle"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="serif"
        android:text="@string/story1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nounone2"
        app:layout_constraintEnd_toStartOf="@+id/nounone"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="199dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="3dp"
        android:fontFamily="serif"
        android:text="@string/story2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/nounone2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:text="@string/story3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/nounone5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="116dp"
        android:fontFamily="serif"
        android:text="@string/story4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nounone5"
        app:layout_constraintTop_toBottomOf="@+id/nounone2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="11dp"
        android:fontFamily="serif"
        android:text="@string/story5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nounone6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nounone5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:text="@string/story6"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nounone7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nounone5"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="serif"
        android:text="@string/story7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="9dp"
        android:fontFamily="serif"
        android:text="@string/story8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nounone8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="7dp"
        android:text="@string/story13"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nounone3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nounone4" />
</androidx.constraintlayout.widget.ConstraintLayout>